--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <!-- NAVIGATION MENU -->
    <nav>
-      <h1>studio francesca from mobile</h1>
+      <h1>studio francesca from main (latest)</h1>
       <ul>
          <li><a href="#">Home</a></li>
          <li><a href="#features">Features</a></li>
